--- a/style.css
+++ b/style.css
@@ -72,10 +72,10 @@ body {
 }
 
 .Card {
-  flex: 0 0 calc((100% - (1.5rem * 2)) / 3 * 1.05); 
-  height: 20rem;
+  flex: 0 0 calc((100% - (1.5rem * 2)) / 3); 
+  height: 14rem;
   background-color: var(--primary-color);
-  border-radius: 1.2rem;
+  border-radius: 0.5rem;
   overflow: hidden;
   scroll-snap-align: center;
   transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
